# reinforcement-learning-cr-bot

./: .gitignore  ATTRIBUTION.md  README.md  SETUP.md  capture_test.py  game_state.py  pyproject.toml  requirements.txt  sample_colors.py
game/: actions.py  capture.py  detector.py  perception.py  tracker.py
game_state/: actions.py  capture.py  perception.py
game_wrapper/: __init__.py  actions.py  capture.py  detector.py  game_state.py  interact.py  perception.py  play_card.py  wrapper.py
rl/: action.py  env.py  obs.py  reward.py  train.py
runs/cr-mppo/MaskablePPO_1/: events.out.tfevents.1777417357.VIVEKSLAPTOP.9180.0
scripts/: capture_card_templates.py  capture_endgame_templates.py  coords.py  sample_colors.py
src/game_wrapper/: detector.py  game_state.py  interact.py  wrapper.py
src/rl/: env.py  train.py
src/scripts/: coords.py  train_yolo.py  train_yolo_colab.ipynb
videos/: links.txt
