[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cr-bot"
version = "0.1.0"
description = "Real-time RL bot that plays Clash Royale via screen capture, YOLO troop detection, and MaskablePPO."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
include = ["game_wrapper*", "rl*"]
